# ChangeLog for app-editors/emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Aug 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1-r1.ebuild:
  No need to recompile if we have bootstrapped before.

  25 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/emacs-22.1-backup-buffer.patch, emacs-22.1-r1.ebuild:
  sync with Portage

  14 Jul 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-22.1-Xaw3d-headers.patch,
  +files/emacs-22.1-disable_alsa_detection.patch,
  +files/emacs-22.1-freebsd-sparc.patch,
  +files/emacs-22.1-oldxmenu-qa.patch, +files/emacs-22.1-xembed.patch,
  +metadata.xml, +emacs-22.1.ebuild:
  XEmbed support, see bug #185064.
