@@ -5,6 +5,6 @@ AUX emacs-22.1-freebsd-sparc.patch 475 RMD160 a8e6e3f2bc014979fd269a027835a65520
 AUX emacs-22.1-oldxmenu-qa.patch 448 RMD160 ac5b0e57569f0963862ded46953be899fb637590 SHA1 10887f5e0ccebde6715307fdc59faa8f826dd597 SHA256 3039fa8eedc22c638e706123bd1affb0f736a53bf0ebc68566678ead92a4c590
 AUX emacs-22.1-xembed.patch 12136 RMD160 96bf6095e8b6af78f7a5289820bde3a7043e74d8 SHA1 570faf7fa854624ea8f00df38a59c9b83f673f00 SHA256 ba41d8bf8830c657565c9ecc506d662f0eb45043e5aa2ea374031ba3185011f7
 DIST emacs-22.1.tar.gz 38172226 RMD160 da5360871db8b1d473ff7f0b0937ee6c278c0b19 SHA1 327664173eabe5db49d4e7e4a4b1794577af902e SHA256 1ec43bef7127e572f92d7c3a846951cf8e263e27445c62c867035f94681c3ed0
-EBUILD emacs-22.1-r1.ebuild 7745 RMD160 5528564a51d7ff5b3867c6f4c004f2efe93e8ec0 SHA1 5d73997c7158658c9ecd55a2c5a4eb88e77cee18 SHA256 1979aeb760c110487e732a03697885bc4691414e60ab2be72160358bfb40a90b
-MISC ChangeLog 705 RMD160 ac275bf2a420f9698041a7c5d84677d6656715d2 SHA1 8c5d802bd72458f976fea9d93318baa3e876880d SHA256 74d864d47242c2ddf61ec618e7134fcfe231b9e2743dc228e8e2efadab2a0d5c
+EBUILD emacs-22.1-r1.ebuild 7663 RMD160 319e1ff438f1e400146cadcd1c4746ae4313d7bf SHA1 941d31254c6a11ce909d219ebff0bca9fd55114c SHA256 9e53f4a084b3eed68c5d7ceb9446c7f12a516eb52ad5813830d2a476040b9cb3
+MISC ChangeLog 844 RMD160 02349d5201bebadec45cf030e8dd0449157a0a92 SHA1 9493a2c77818659084109522058f44c25f5a15a9 SHA256 46fc594c3e5bdd0e06224ebf0c835773912ec39a3dadab5180660feef08672ff
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
